// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Indicator > should match its default snapshot 1`] = `
<div
  class="inline-block"
  data-id="sds-indicator"
>
  <div
    class="relative"
  >
    <!-- @slot Indicator content.  -->
    
    Indicator
    
    <div
      class="absolute rounded-full dark:border-gray-900 -top-1.5 -right-1.5 h-4 w-4 border-2 border-white bg-blue-500 dark:bg-blue-400"
      role="status"
    >
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Indicator > should match its variant green, placement bottom-right snapshot 1`] = `
<div
  class="inline-block"
  data-id="sds-indicator"
>
  <div
    class="relative"
  >
    <!-- @slot Indicator content.  -->
    
    Indicator
    
    <div
      class="absolute rounded-full dark:border-gray-900 -bottom-1.5 -right-1.5 h-4 w-4 border-2 border-white bg-green-500 dark:bg-green-400"
      role="status"
    >
      <!--v-if-->
    </div>
  </div>
</div>
`;
